<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="120dip"
        android:src="@drawable/gmote_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/step_2"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <!--
         <TextView android:id="@+id/welcome_message" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
		android:text="@string/welcome_message" android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_marginTop = "20dip" />
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_page"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/email_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/email_me"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#F2933c"
        android:textColorHighlight="#FFFF00" />
    <!--
         <ImageView android:src="@drawable/gmote_server_dli" android:adjustViewBounds="true"
		android:maxHeight="100dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
		/>
    -->


    <!--
         <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/email_link" android:includeFontPadding="false" android:text="Email
		me the link" android:height="15dip"></Button>
    -->

    <Button
        android:id="@+id/welcome_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dip"
        android:text="@string/welcome_continue" />

</LinearLayout>