<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/new_first_background"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="5.0" />

    <TextView
        android:id="@+id/first_ipaddress"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="25.0"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/ip_address"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="40.0"
        android:orientation="horizontal" >

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="75.0" />

        <EditText
            android:id="@+id/server_edit"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="330.0"
            android:digits="1234567890."
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="75.0" />
    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="5.0" />

    <TextView
        android:id="@+id/port_label"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="25.0"
        android:gravity="center"
        android:text="@string/tcp_port"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="40.0"
        android:orientation="horizontal" >

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="75.0" />

        <EditText
            android:id="@+id/tcp_port_edit"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="330.0"
            android:hint="8851"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="75.0" />
    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="5.0" />

    <TextView
        android:id="@+id/udp_port_label"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="25.0"
        android:gravity="center"
        android:text="@string/udp_port"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="40.0"
        android:orientation="horizontal" >

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="75.0" />

        <EditText
            android:id="@+id/udp_port_edit"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="330.0"
            android:hint="9901"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="75.0" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="8.0" />

    <TextView
        android:id="@+id/first_serverlist"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="25.0"
        android:gravity="center"
        android:text="@string/server_list"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="265.0"
        android:orientation="horizontal" >

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14.0" />

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="292.0"
            android:background="@drawable/list_view_background" >

            <ListView
                android:id="@+id/first_serverlist_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="#00000000" >
            </ListView>
        </LinearLayout>

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14.0" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="10.0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="60.0"
        android:orientation="horizontal" >

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="10.0" />

        <ImageButton
            android:id="@+id/new_first_remove"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="91.0"
            android:background="@drawable/new_first_remove" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="10.0" />

        <ImageButton
            android:id="@+id/new_first_connect"
            android:focusable="true"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="91.0"
            android:background="@drawable/new_first_connect">
            <requestFocus />
        </ImageButton>

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="13.0" />
    </LinearLayout>
</LinearLayout>